# RiftSkeleton

./: .gitignore  CMakeLists.txt
shaders/: basicplane.frag  ucolor.frag
src/: glfw_main.cpp  glfw_model_main.cpp
src/AppSkeleton/: AppSkeleton.h  RiftAppSkeleton.cpp
src/Model/: mesh.h  model.h
src/Model/a511/: 511.3ds  511.blend  511.dae  511.fbx  a511.mtl  test_cube.dae  test_cube.mtl
src/Scene/: ModelScene.cpp  ModelScene.h
